[project]
name = "balanz"
version = "0.11.2"
description = "Simple, yet feature-rich, CSMS or LC OCPP Server with Smart Charging Capabilities."
authors = [
    {name = "jens-markussen",email = "jens.markussen@gmail.com"}
]
repository = "https://github.com/ocpp-balanz/balanz"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
ocpp = "^2.0.0"
pydantic = "^1.0.0"
websockets = "^14.2.0"
python = "^3.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^0.25.2"
black = "^24"
isort = "^5"
flake8 = "^7"
sphinx = "^8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
